--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,26 @@
+@import "~bootstrap/scss/bootstrap";
+
 *{
-	background: yellow;
+	margin:0;
+	padding:0;
+	font-family:Arial;
+
+}
+
+.main_logo{
+	color:#3c131a;
+	font-weight:bold;
+	font-size:50px;
+	display:inline-block;
+}
+
+.logo_sign{
+	float:left;
+}
+.btn_img{
+	width:30px;
+	height:30px;
+}
+.menu_categories{
+	display:none;	
 }
