--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,13 +14,14 @@
 	display:inline-block;
 }
 
-.logo_sign{
-	float:left;
+.heading{
+	display:block;
+	background:yellow;
 }
 .btn_img{
 	width:30px;
 	height:30px;
 }
-.menu_categories{
-	display:none;	
+#categories{
+	color:#441129;
 }
