--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6323,6 +6323,10 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 50px;
   display: inline-block; }
 
+.btn_img {
+  float: right;
+  margin: 1%; }
+
 .heading {
   display: block;
   background: yellow; }
@@ -6332,5 +6336,17 @@ a.text-dark:hover, a.text-dark:focus {
   height: 30px; }
 
 #categories {
-  color: #441129; }
+  color: #441129;
+  display: none; }
+
+.butt {
+  position: fixed;
+  right: 20px;
+  bottom: 5%;
+  z-index: 1;
+  opacity: 0.0;
+  transition: 2s; }
+
+.product-image {
+  vertical-align: middle; }
 
