--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6338,7 +6338,8 @@ a.text-dark:hover, a.text-dark:focus {
 
 .bbb {
   margin: 0 15%;
-  display: none; }
+  display: none;
+  cursor: pointer; }
 
 .main_logo {
   color: #3c131a;
@@ -6359,7 +6360,8 @@ a.text-dark:hover, a.text-dark:focus {
 
 .btn_img {
   width: 30px;
-  height: 30px; }
+  height: 30px;
+  cursor: pointer; }
 
 #categories {
   color: #441129;
@@ -6383,14 +6385,15 @@ a.text-dark:hover, a.text-dark:focus {
   bottom: 5%;
   z-index: 1;
   opacity: 0.0;
-  transition: 2s; }
+  transition: 2s;
+  cursor: pointer; }
 
 .product-image {
   vertical-align: middle;
   margin: 2%;
   max-width: 32vh;
   max-height: 40vh;
-  object-fit: contain; }
+  object-fit: cover; }
 
 .product_view {
   background: #ffffff; }
@@ -6408,7 +6411,8 @@ a.text-dark:hover, a.text-dark:focus {
 
 .my_btn {
   float: left;
-  margin-left: 45%; }
+  margin-left: 45%;
+  cursor: pointer; }
 
 .product_view {
   margin-bottom: 10%; }
