--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6347,7 +6347,7 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 50px;
   display: inline-block; }
 
-.load, .btn_img, .main_logo:hover {
+.loadAll, .load, .btn_img, .main_logo:hover {
   cursor: pointer; }
 
 .btn_img {
